--- a/posts/update/index.qmd
+++ b/posts/update/index.qmd
@@ -3,7 +3,7 @@ title: "Updates"
 author: "Vivian"
 date: "2024-06-04"
 categories: [nlp]
-image: "thumbnail.jpg"
+image: "image.jpg"
 ---
 
 1. spacy model
