--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,14 @@
 ---
-title: "Vivian's Blog"
+title: "Blog posts"
 listing:
   contents: posts
   sort: "date desc"
   type: default
   categories: true
-  sort-ui: false
+  sort-ui: true
   filter-ui: false
+  exclude:
+    categories: news
 page-layout: full
 title-block-banner: true
 ---
