--- a/index.qmd
+++ b/index.qmd
@@ -5,10 +5,10 @@ listing:
   sort: "date desc"
   type: default
   categories: true
-  sort-ui: true
+  sort-ui: [title, date]
   filter-ui: false
   exclude:
-    categories: news
+    categories: nd
 page-layout: full
 title-block-banner: true
 ---
