--- a/posts/cen/index.qmd
+++ b/posts/cen/index.qmd
@@ -1,7 +1,10 @@
 ---
-title: "CEN"
+title: "This was where it began"
 author: "Vivian"
 date: "2024-06-04"
-categories: [nd]
+categories: [story]
 ---
-abc
+
+It was the beginning of 2024. She was wondering what had happened 6 years ago. In order to find the answer, she started to read her text messages between her mother in the middle of the night. It was a night without sleep, literally. As she read through the text messages, she started shaking. She was able to find the answer and something else she never expected. 
+
+She never had the patience to actually read previous text messages, since it felt too much work for her. This time she got off a weird phone call, on which her father were being so defensive, evasive and kept telling her she made that decision by herself 6 years ago. Her memory had been so blurry all the time and she never questioned her father before, so she took that as a fact. However, she couldn't understand why she made that decision no matter how hard she tried to remember. She'd been living through several depression episodes over the last 6 years, she felt like it never left her. And a few darkest time periods were directly related to the decision 6 years ago. Since she had the belief that she made that decision by herself, she believed she deserve it. 
