--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -3,7 +3,7 @@ title: "Post With Code"
 author: "Harlow Malloc"
 date: "2024-06-02"
 categories: [news, code, analysis]
-image: "image.jpg"
+draft: True
 ---
 
 This is a post with executable code.
