--- a/posts/addiction/index.qmd
+++ b/posts/addiction/index.qmd
@@ -2,11 +2,12 @@
 title: "Solution for Phone Addiction"
 author: "Vivian"
 date: "2024-06-10"
-categories: [adhd, self-care]
+categories: [adhd, minimalism]
 image: "image.jpg"
 ---
 
-## Phone addiction
+## Replace IPhone
+This is my first step of digital declutter process. 
 Do I want to start the day by playing video games and scrolling the short videos or watching long videos? No I don't. I need some intervention. What can I do to help myself from doing it over and over again? How exactly? It's not fair.
 Maybe one thing I can do is to start the day with reviewing my todoist list. I don't want to see stuff that is overdue to be honest.
 
@@ -25,12 +26,14 @@ In order to get rid of iphone, what do I need to do?
 - [ ] manage wechat storage
 - [ ] Let some people know that I will be switching to a non-Apple phone, and suggest them to send me SMS messages. WhatsApp is another alternative, but for long term solution would better be SMS, since it's going to be useful for a real dumbphone lifestyle.
 
-## Iphone Adjustment for now
+## IPhone Adjustment for now
+Eventually the goal is to get rid of IPhone, because it's not good for my ADHD brain.
 - [x] Apply greyscale color filters to display 
 - [x] Delete all social media app and games (not sustainable for the following reasons)
     1. even though I know it's not healthy for me to install them back, but there is nothing to prevent me from installing them again, and it has happend to me numerous times
     2. some social media app I can't abandon completely because I might lose some contacts by doing that.
 - [x] For social media app that has TikTok-like feature, delete them all and use website on mac if nessasary.
 
-## Dumbphone
+## Dumbphone in the future
 I just pre-ordered Light phone 3 and hopefully it'll be my primary phone and Jelly Star can work as a secondary.
+Remarkable2 is an almost perfect product but it doesn't support DRM protected ebooks.
