--- a/posts/spaCy/index.qmd
+++ b/posts/spaCy/index.qmd
@@ -15,19 +15,23 @@ This is a post about NLP in a Quarto blog. Welcome!
 ![Architecture](architecture.svg)
 
 
-```{mermaid}
-mindmap
-  root((spaCy))
-    Language object<br/>nlp
-        Tokenizer
-        Processing<br/>pipeline
-            tagger
-            parser
-            ner
-    Doc object
-        tokens
-        Linguistic<br/>annotations
-          give insights into grammatical structure and features
-          ::icon(fa fa-file)
-    Vocab object
+```{python}
+import spacy
+nlp = spacy.load("en_core_web_sm")
+
+# Shared vocab and string store
+nlp.vocab.strings.add("coffee")
+coffee_hash = nlp.vocab.strings["coffee"]
+coffee_string = nlp.vocab.strings[coffee_hash]
+doc = nlp("I love coffee")
+print("hash value:", nlp.vocab.strings["coffee"])
+print("string value:", nlp.vocab.strings[3197928453018144401])
+```
+
+```{python}
+# Lexemes: entries in the vocabulary
+doc = nlp("I love coffee")
+lexeme = nlp.vocab["coffee"]
+# Print the lexical attributes
+print(lexeme.text, lexeme.orth, lexeme.is_alpha)
 ```
