--- a/posts/spaCy/index.qmd
+++ b/posts/spaCy/index.qmd
@@ -5,19 +5,19 @@ date: "2024-06-12"
 categories: [nlp]
 image: "image.jpg"
 jupyter: env
+code-fold: true
 ---
 
 This is a post about NLP in a Quarto blog. Welcome!
 
-## spaCy 101
-[](https://spacy.io/usage/spacy-101)
+## Vocab, Lexemes and StringStore
+[https://spacy.io/usage/spacy-101](https://spacy.io/usage/spacy-101)
 
 ![pipeline](pipeline.svg)
 ![Architecture](architecture.svg)
 
 
 ```{python}
-#| echo: false
 import spacy
 nlp = spacy.load("en_core_web_sm")
 
@@ -31,10 +31,41 @@ print("string value:", nlp.vocab.strings[3197928453018144401])
 ```
 
 ```{python}
-#| echo: false
 # Lexemes: entries in the vocabulary
 doc = nlp("I love coffee")
 lexeme = nlp.vocab["coffee"]
 # Print the lexical attributes
 print(lexeme.text, lexeme.orth, lexeme.is_alpha)
+```
+
+## Doc, Span and Token
+```{python}
+# Create an nlp object
+import spacy
+nlp = spacy.blank("en")
+
+# Import the Doc and Span classes
+from spacy.tokens import Doc, Span
+
+# The words and spaces to create the doc from
+words = ["I", "like", "David", "Bowie"]
+spaces = [True, True, True, False]
+
+# Create a doc manually
+doc = Doc(nlp.vocab, words=words, spaces=spaces)
+print(doc.text)
+
+# Create a span manually
+# span = Span(doc, 0, 2)
+
+# Create a span with a label
+# Create a span for "David Bowie" from the doc and assign it the label "PERSON"
+span_with_label = Span(doc, 2, 4, label="PERSON")
+print(span_with_label.text, span_with_label.label_)
+
+# Add span to the doc.ents (doc's entities)
+doc.ents = [span_with_label]
+
+# Print entities' text and labels
+print([(ent.text, ent.label_) for ent in doc.ents])
 ```
