--- a/posts/spaCy/index.qmd
+++ b/posts/spaCy/index.qmd
@@ -8,15 +8,13 @@ jupyter: env
 code-fold: true
 ---
 
-This is a post about NLP in a Quarto blog. Welcome!
+[Spacy 101](https://spacy.io/usage/spacy-101)
 
-## Vocab, Lexemes and StringStore
-[https://spacy.io/usage/spacy-101](https://spacy.io/usage/spacy-101)
-
-![pipeline](pipeline.svg)
+## Pipeline and Architecture
+![pipeline](pipeline.svg){width=300}
 ![Architecture](architecture.svg)
 
-
+## Vocab, Lexemes and StringStore
 ```{python}
 import spacy
 nlp = spacy.load("en_core_web_sm")
@@ -41,7 +39,6 @@ print(lexeme.text, lexeme.orth, lexeme.is_alpha)
 ## Doc, Span and Token
 ```{python}
 # Create an nlp object
-import spacy
 nlp = spacy.blank("en")
 
 # Import the Doc and Span classes
@@ -68,4 +65,19 @@ doc.ents = [span_with_label]
 
 # Print entities' text and labels
 print([(ent.text, ent.label_) for ent in doc.ents])
+```
+
+## Data structures best practices
+```{python}
+nlp = spacy.load("en_core_web_sm")
+doc = nlp("Berlin looks like a nice city")
+
+for token in doc:
+    # Check if the current token is a proper noun
+    if token.pos_ == "PROPN":
+        # Check if the next token is a verb
+        if token.i + 1 < len(doc):
+            if doc[token.i + 1].pos_ == "VERB":
+                result = token.text
+                print("Found proper noun before a verb:", result)
 ```
